# research_crew

./: README.md  pyproject.toml  report.md
src/research_crew/: crew.py  main.py
src/research_crew/tools/: pdf_tool.py
